--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "bootstrap"
+    "name": "rbootstrap"
   , "description": "Sleek, intuitive, and powerful front-end framework for faster and easier web development."
   , "version": "3.0.0"
-  , "keywords": ["bootstrap", "css"]
-  , "homepage": "http://twbs.github.com/bootstrap/"
-  , "author": "Twitter Inc."
+  , "keywords": ["rbootstrap", "bootstrap", "css"]
+  , "homepage": "http://rbootstrap.ir/"
+  , "author": "Naqsh Jahan Toos Inc."
   , "scripts": { "test": "grunt test" }
   , "repository": {
       "type": "git"
-    , "url": "https://github.com/twbs/bootstrap.git"
+    , "url": "https://github.com/jnaqsh/rbootstrap.git"
   }
   , "bugs": {
-      "url": "https://github.com/twbs/bootstrap/issues"
+      "url": "https://github.com/jnaqsh/rbootstrap/issues"
   }
   , "licenses": [
     {
